[package]
name = "booru"
version = "0.2.6"
edition = "2021"
description = "An async Booru client for Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru"
repository = "https://github.com/cijiugechu/booru"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
async-trait = "0.1.59"
