[package]
name = "booru"
version = "0.3.1"
edition = "2021"
authors = ["cijiugechu <cijiugechu@gmail.com>"]
description = "An async Booru client for Rust"
keywords = ["booru", "api", "client", "danbooru"]
categories = ["api-bindings", "network-programming", "web-programming"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru"
repository = "https://github.com/cijiugechu/booru"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"

[[example]]
name = "get_popular"