[package]
name = "booru"
version = "0.6.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["cijiugechu <cijiugechu@gmail.com>"]
description = "An async Booru client for Rust"
keywords = ["booru", "api", "client", "danbooru"]
categories = ["api-bindings", "network-programming", "web-programming"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru"
repository = "https://github.com/cijiugechu/booru"
readme = "README.md"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
itoa = { version = "1.0.9"}
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[[example]]
name = "get_popular"
